후반 작업 완료

--- a/index.html
+++ b/index.html
@@ -52,8 +52,22 @@
                 </li>
             </ul>
         </div>
+        <h2>혼다코리아 본사 위치</h2>
         <div class="honda_map">
+            <hr>
             <div id="map"></div>
+            <div class="traffic">
+                <li>
+                    서울시 강남구 삼성로 12-3, 대한빌딩 1F (전시장)
+                </li>
+                <li>
+                    지하철 3호선, 삼성역에서 하차 후 도보로 5분거리
+                </li>
+                <li>
+                    건물 공용주차장/ 타워 주차장 (30분 초과시 1000원)<br>
+                    전시장 앞 10대 주차 가능
+                </li>
+            </div>
             <script>
                 var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
         mapOption = { 
