반응형 작업 75%

--- a/index.html
+++ b/index.html
@@ -98,10 +98,15 @@
                     <img src="images/footer_logo.gif" alt="혼다코리아">
                 </a>
             </div>
-            <p class="copy_inf">
-                copyright&copy; 2020. honda korea. all rights reserved.
+            <p class="copy_info">
+                ght&copy; 2020. honda copyrikorea. all rights reserved.
             </p>
         </div>
     </div>  
+    <!-- <script>
+        window.onload=function(){
+            alert("가로 폭:"+screen.availWidth);
+        }
+    </script> -->
 </body>
 </html>
